--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,5 +6,13 @@
     <fragment
         android:id="@+id/repositoryListFragment"
         android:name="com.ozupek.myapplication.ui.repositorylist.RepositoryListFragment"
-        android:label="RepositoryListFragment" />
+        android:label="RepositoryListFragment" >
+        <action
+            android:id="@+id/action_repositoryListFragment_to_userDetailFragment"
+            app:destination="@id/userDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/userDetailFragment"
+        android:name="com.ozupek.myapplication.ui.userdetail.UserDetailFragment"
+        android:label="UserDetailFragment" />
 </navigation>
